Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27349

Qt on X11 does not support -name, -class, -geometry and -display parameters

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.0
    • 5.0.0
    • Core: Other
    • None
    • arch linux, Xorg server, running creator built against Qt5, using the XCB platform.
    • Qt 5.2: c96a6ab627100452864eb4d8da973300401c1bfa (argc, argv parsing). -name: 15b45c608fce1845e7f8c61edaeb35f0acc11ed9 , -geometry d7e37537d4fa2127e6ec404b9f8358337f63d9b1

    Description

      Qt5 apps running on X11 have no way to set the settings that Qt4 apps set with "-name", "-class" and "-geometry".
      Please add a way to change those settings in a Qt5 application so that users can make full use of their window managers
      again.

      Original description:

      Qt5 apps running in X11 do not support the -name parameter to override the window name available in all other X11 apps (incl. Qt4 apps!).

      I am not aware of any way to work around this limitation. This makes integrating Qt5 apps into existing X11 environments harder.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kleint Friedemann Kleint
              hunger Tobias Hunger
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes